--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -4,10 +4,11 @@
 
 {% block body %}
 
-<!-- card -->
-    <div class="container p-5">
-        <div class="block welcome">
-            <img src="{{ asset('images/homepage-welcome.png') }}" alt="ticketing yoomoonk welcome" class="w-100 h-auto" /> 
+    <div class="container">
+        <h1 class="mt-3 mb-3 font-weight-bold text-center">Bienvenue sur Ticketing Yoomoonk</h1>
+        <p class="text-center">Votre gestionnaire de tickets centralisé, ajouter votre demande, nos équipes reviennent vers vous rapidement</p>
+        <div class="picture d-flex justify-content-center mt-4 mb-4">
+            <img src="{{ asset('images/homepage-welcome.png') }}" alt="ticketing yoomoonk welcome" /> 
         </div>
     </div>
 
