--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,12 +13,9 @@
     <!-- Nav -->
     <nav class="navbar navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{{ path('homepage_index') }}"><strong>Ticketing Yoomoonk</strong><span class="sr-only">(current)</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <form class="form-inline ml-4 my-2 my-lg-0">
-            <button type="button-inline" class="btn btn-secondary mr-4"><a href="{{ path( 'ticket-index' ) }}">Liste des tickets</a></button>
-            <button type="button-inline" class="btn btn-secondary mr-4"><a href="{{ path( 'ticket-create' ) }}">Ajouter un ticket !</a></button>
+            <button type="button-inline" class="btn btn-dark mr-4"><a href="{{ path( 'ticket-index' ) }}">Liste des tickets</a></button>
+            <button type="button-inline" class="btn btn-dark mr-4"><a href="{{ path( 'ticket-create' ) }}">Ajouter un ticket !</a></button>
         </form>
     </nav>
     <main>
@@ -28,7 +25,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="w-100 pr-4 pl-4 pt-3 pb-3 d-flex">
+    <footer class="w-100 mt-5 pr-4 pl-4 pt-3 pb-3 d-flex">
       <small class="text-muted">made with &#9829</small>
       <a href="#">Copyright 2023 @Yoomoonk</a>
       <a href="#">Contact</a>
