--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="container">
+    <div class="welcome container pt-4 pb-3">
         <h1 class="mt-3 mb-3 font-weight-bold text-center">Bienvenue sur Ticketing Yoomoonk</h1>
         <p class="text-center">Votre gestionnaire de tickets centralisé, ajouter votre demande, nos équipes reviennent vers vous rapidement</p>
         <div class="picture d-flex justify-content-center mt-4 mb-4">
