--- a/templates/ticket/create.html.twig
+++ b/templates/ticket/create.html.twig
@@ -5,15 +5,15 @@
 {% block body %}
 
     <div class="container pt-4 pb-4">
-        <p class="pt-3 font-weight-bold">Ajouter un ticket</p>
+        <p class="title pt-3 font-weight-bold text-center">Ajouter un ticket</p>
         <div class="jumbotron p-5">
 
             {{ form_start(form) }}
 
             {{ form_widget(form) }}
 
-            <button type="button-inline" class="btn btn-secondary"><a href="{{ path( 'ticket-index' ) }}">Annuler</a></button>
-            <button type="submit" class="btn btn-secondary">Envoyez</button>
+            <button type="button-inline" class="btn btn-dark"><a href="{{ path( 'ticket-index' ) }}">Annuler</a></button>
+            <button type="submit" class="btn btn-info">Envoyer</button>
 
             {{ form_end(form) }}
 
