--- a/templates/ticket/edit.html.twig
+++ b/templates/ticket/edit.html.twig
@@ -4,20 +4,20 @@
 
 {% block body %}
 
-<h3 class="mb-3 text-muted">Modifier le ticket #{{ customer.id }}</h3>
+<div class="container pt-4 pb-4">
+    <p class="title pt-3 font-weight-bold text-center">Modifier le ticket #{{ customer.id }}</p>
+    <div class="jumbotron p-5">
 
-<div class="jumbotron">
+        {{ form_start(form) }}
 
-    {{ form_start(form) }}
+            {{ form_widget(form) }}
 
-        {{ form_widget(form) }}
+            <button type="button-inline" class="btn btn-dark"><a href="{{ path( 'ticket-index' ) }}">Annuler</a></button>
+            <button type="submit" class="btn btn-info">Envoyez</button>
 
-        <button type="button-inline" class="btn btn-secondary"><a href="{{ path( 'ticket-index' ) }}">Annuler</a></button>
-        <button type="submit" class="btn btn-secondary">Envoyez</button>
+        {{ form_end(form) }}
 
-    {{ form_end(form) }}
-
+    </div>
 </div>
-
 
 {% endblock %}
