--- a/templates/ticket/read.html.twig
+++ b/templates/ticket/read.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="container p-5">
-        <button type="button-inline" class="btn btn-secondary"><a href="{{ path( 'ticket-index' ) }}">Retour à la liste</a></button>
+        <button type="button-inline" class="btn btn-info"><a href="{{ path( 'ticket-index' ) }}">Retour à la liste</a></button>
         <div class="d-flex flex-wrap mt-4">
             <div class="card list-ticket border-grey mb-3 mr-4 mt-3 w-100">
                 <div class="card-header d-flex justify-content-between">
