[fix] propriety css

--- a/public/css/lumen.css
+++ b/public/css/lumen.css
@@ -2146,7 +2146,7 @@ pre code {
 .table-dark th,
 .table-dark td,
 .table-dark thead th {
-  border-color: ##9db4c0;
+  border-color: #9db4c0;
 }
 
 .table-dark.table-bordered {
